# changeforest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  asv.conf.json
.github/workflows/: build.yml  ci.yml
changeforest-py/: Cargo.toml  MANIFEST.in  README.md  environment.yml  pyproject.toml
changeforest-py/changeforest/: __init__.py  control.py  plotting.py  result.py
changeforest-py/src/: control.rs  lib.rs  result.rs
changeforest-py/tests/: conftest.py  test_changeforest.py  test_control.py  test_plotting.py
changeforest-r/: .Rbuildignore  DESCRIPTION  Installing_R_packages_with_conda.md  LICENSE  NAMESPACE  README.md  configure
changeforest-r/R/: changeforest.R  control.R  display.R  extendr-wrappers.R
changeforest-r/man/: Control.Rd  changeforest.Rd  changeforest_api.Rd  plot.binary_segmentation_result.Rd  plot.optimizer_result.Rd
changeforest-r/src/: .gitignore  Makevars  Makevars.in  Makevars.win  changeforest-win.def  entrypoint.c
changeforest-r/src/rust/: Cargo.toml
changeforest-r/src/rust/src/: control.rs  lib.rs  result.rs
changeforest-r/tests/: testthat.R
changeforest-r/tests/testthat/: setup.R  test-control.R  test-display.R  test-hdcd.R
hdcd-python/: .gitignore  Cargo.toml  README.md  environment.yml  pyproject.toml
hdcd-python/benchmarks/: benchmarks.py  environment.yml
hdcd-python/benchmarks/data/: __init__.py  load_data.py
hdcd-python/hdcd/: __init__.py  control.py
hdcd-python/src/: control.rs  lib.rs  result.rs
hdcd-python/tests/: conftest.py  test_control.py  test_hdcd.py
hdcd-r/: DESCRIPTION  NAMESPACE  README.md
hdcd-r/R/: control.R  display.R  extendr-wrappers.R  hdcd.R
hdcd-r/man/: hdcd.Rd  hdcd_api.Rd  print.binary_segmentation_result.Rd
hdcd-r/src/: Makevars  Makevars.win  entrypoint.c
hdcd-r/src/rust/: Cargo.toml
hdcd-r/src/rust/src/: control.rs  lib.rs  result.rs
hdcd-r/tests/: testthat.R
hdcd-r/tests/testthat/: setup.R  test-control.R  test-display.R  test-hdcd.R
src/: binary_segmentation.rs  change_in_mean.rs  classifier.rs  control.rs  fmt.rs  gain.rs  interface.rs  kNN.rs  lib.rs  loss.rs  model_selection.rs  model_selection_result.rs  optimizer.rs  segmentation.rs  testing.rs  utils.rs  wrapper.rs
src/classifier/: classifier.rs  knn.rs  mod.rs  random_forest.rs
src/gain/: change_in_mean.rs  classifier_gain.rs  gain.rs  gain_result.rs  mod.rs
src/optimizer/: grid_search.rs  mod.rs  optimizer.rs  optimizer_result.rs  result.rs  two_step_search.rs
testdata/: iris.csv  letters.csv
tests/: test_integration.rs
