[package]
name = "changeforest"
version = "0.3.0"
edition = "2018"

[lib]
name = "changeforest"

[dependencies]
ndarray = "0.15.3"
rand = "0.8.4"
biosphere = "0.1.0"

[dev-dependencies]
rstest = "0.11.0"
assert_approx_eq = "1.1.0"
ndarray-rand = "0.14.0"
ndarray = { version = "0.15.3", features = ["approx"] }
ndarray-csv = "^0.5"
csv = "^1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html