[package]
name = "changeforest"
description = "Random Forests for Change Point Detection"
authors = ["Malte Londschien <malte@londschien.ch>"]
repository = "https://github.com/mlondschien/changeforest/"
version = "1.1.3"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
exclude = ["/.github", "/changeforest-py", "/changeforest-r", "/testdata", ".pre-commit-config.yaml", ".gitignore"]

[lib]
name = "changeforest"

[dependencies]
ndarray = "0.15"
rand = "0.8"
biosphere = "0.3.0"

[dev-dependencies]
rstest = "0.18"
assert_approx_eq = "1.1"
ndarray-rand = "0.14"
ndarray = { version = "0.15", features = ["approx"] }
ndarray-csv = "^0.5"
csv = "^1"
