[package]
name = "changeforest_py"
version = "1.2.0"
edition = "2021"
readme = "README.md" 

[lib]
name = "changeforest"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "changeforest"

[dependencies]
numpy = "0.26"
changeforest = { path = "../" }
ndarray = "0.16"
pyo3 = {version = "0.26", features = ["extension-module"]}
biosphere = "0.4.0"
