[package]
name = "changeforest_py"
version = "1.2.1"
edition = "2021"
readme = "README.md" 

[lib]
name = "changeforest"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "changeforest"

[dependencies]
numpy = "0.27"
changeforest = { path = "../" }
ndarray = "0.17"
pyo3 = {version = "0.27", features = ["extension-module"]}
biosphere = "0.4.0"
