[package]
name = 'changeforestr'
version = '0.4.1'
edition = '2021'

[lib]
name = 'changeforest'
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = { version="0.2.0", features = ["ndarray"] }
changeforest = { path = "../../../" }
ndarray = "0.15.3"

[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys" }
extendr-api = { git = 'https://github.com/extendr/extendr'} 