[package]
name = 'changeforestr'
version = '0.6.1'
edition = '2021'

[lib]
name = 'changeforest'
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = { version="0.2.0", features = ["ndarray"] }
changeforest = { path = "../../../" }
ndarray = "0.15.3"
biosphere = "0.3.0"

[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys", rev = "355cf0de0dd7f28cfa3933a70b29deb247eb2017" }
extendr-api = { git = "https://github.com/extendr/extendr", rev = "a59d65c50e001810dadba2d8624517a36b4725d2" } 