[package]
name = 'hdcdr'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = { git = 'https://github.com/extendr/extendr', rev = '6935c7dee0edc7e02c6355379376d8001167cd13', features = ["ndarray"] }
# extendr-api = { version="0.2.0", features = ["ndarray"] }
changeforest = { path = "../../../" }
ndarray = "0.15.3"